IBX-2406: Fix main menu buttons text vertical alignemnt

--- a/src/bundle/Resources/public/scss/_main-menu.scss
+++ b/src/bundle/Resources/public/scss/_main-menu.scss
@@ -162,6 +162,7 @@
 
     &__item-action {
         display: flex;
+        align-items: center;
         margin: 0 calculateRem(6px);
         text-decoration: none;
         border-radius: $ibexa-border-radius;
